style: prevent overflow past parent container

--- a/src/shared/ui/Input/input.module.css
+++ b/src/shared/ui/Input/input.module.css
@@ -29,6 +29,7 @@
 .legend {
   font-size: var(--font-size-label);
   height: 0;
+  max-width: 100%;
   visibility: hidden;
   & span {
     padding-left: var(--space-1-5);
@@ -41,11 +42,15 @@
   font-size: var(--font-size-label);
   left: 0;
   line-height: 1;
+  max-width: calc(100% - var(--space-6));
+  overflow: hidden;
   padding: 0 var(--space-1-5);
   pointer-events: none;
   position: absolute;
+  text-overflow: ellipsis;
   top: 0;
   transform: translate(var(--space-3), -50%);
+  white-space: nowrap;
   z-index: 1;
 }
 
@@ -55,6 +60,9 @@
   font-size: var(--space-3);
   font-variant-numeric: tabular-nums;
   line-height: 1.25;
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
   white-space: nowrap;
 }
 
@@ -105,6 +113,7 @@
   font-family: inherit;
   font-size: var(--font-size-input);
   padding: var(--padding-y) var(--space-4) var(--padding-y) var(--space-4);
+  text-overflow: ellipsis;
   width: 100%;
   &:disabled {
     cursor: not-allowed;
@@ -119,9 +128,7 @@
 }
 
 .footer {
-  align-items: flex-start;
   display: flex;
-  gap: var(--space-2);
   justify-content: flex-end;
   padding: 0 var(--space-1);
 }
