--- a/src/shared/ui/Select/select.module.css
+++ b/src/shared/ui/Select/select.module.css
@@ -45,13 +45,14 @@
     mask-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Cpath d='M8 9.95404L14.542 4.50234C14.9192 4.18806 15.4797 4.23902 15.794 4.61615C16.1082 4.99329 16.0573 5.55379 15.6801 5.86807L8.56905 11.794C8.23941 12.0687 7.76059 12.0687 7.43095 11.794L0.319858 5.86807C-0.0572765 5.55379 -0.108231 4.99329 0.206047 4.61615C0.520326 4.23902 1.08083 4.18806 1.45796 4.50234L8 9.95404Z' fill='%23495057'/%3E%3C/svg%3E");
     mask-repeat: no-repeat;
     mask-size: contain;
-    min-width: var(--icon-size);
+    max-width: calc(100% - var(--space-6));
     pointer-events: none;
     position: absolute;
     right: var(--space-4);
     top: 50%;
     transform: translateY(-50%);
     transition: transform 0.15s ease-in-out;
+    width: var(--icon-size);
   }
   &:has(.select:disabled) {
     color: var(--color-on-surface-variant);
@@ -76,11 +77,15 @@
   font-size: var(--font-size-label);
   left: 0;
   line-height: 1;
+  max-width: calc(100% - var(--space-6));
+  overflow: hidden;
   padding: 0 var(--space-1-5);
   pointer-events: none;
   position: absolute;
+  text-overflow: ellipsis;
   top: 0;
   transform: translate(var(--space-3), -50%);
+  white-space: nowrap;
   z-index: 1;
 }
 
